force-app/main/default/objects/AIViolation__c/AIViolation__c.object-meta.xml
<CustomObject>
    <description>A permanent, auditable record of a rule condition being met during AI Assist processing. Written asynchronously via a Platform Event subscriber, decoupled from the live conversation transaction, so logging volume never affects response time or creates record locking on frequently-accessed objects.</description>
    <label>AI Violation</label>
    <nameField>
        <displayFormat>AI Violation - {000000}</displayFormat>
        <label>AI Violation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>🚨 AI Violations</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>