force-app/main/default/objects/AIViolation__c/fields/AIConversation__c.field-meta.xml
<CustomField>
    <fullName>AIConversation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The conversation this violation occurred in, if applicable.</description>
    <inlineHelpText>The conversation this violation occurred in, if applicable.</inlineHelpText>
    <label>AI Conversation</label>
    <referenceTo>AIConversation__c</referenceTo>
    <relationshipLabel>AI Violations</relationshipLabel>
    <relationshipName>AIViolations</relationshipName>
    <type>Lookup</type>
</CustomField>