force-app/main/default/objects/AIViolation__c/fields/AIViolationRule__c.field-meta.xml
<CustomField>
    <fullName>AIViolationRule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The rule that detected this violation.</description>
    <inlineHelpText>Links back to the specific rule and condition that triggered this record.</inlineHelpText>
    <label>AI Violation Rule</label>
    <referenceTo>AIViolationRule__c</referenceTo>
    <relationshipLabel>AI Violations</relationshipLabel>
    <relationshipName>AIViolations</relationshipName>
    <type>Lookup</type>
</CustomField>