force-app/main/default/objects/AIViolation__c/fields/Detail__c.field-meta.xml
<CustomField>
    <fullName>Detail__c</fullName>
    <description>Specifics of what was requested or attempted, without including the actual sensitive content involved.</description>
    <inlineHelpText>Describe what triggered this violation. Avoid including raw PII or prohibited content itself in this field.</inlineHelpText>
    <label>Detail</label>
    <type>TextArea</type>
</CustomField>