force-app/main/default/objects/AIViolation__c/fields/RequestBlocked__c.field-meta.xml
<CustomField>
    <fullName>RequestBlocked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether the underlying request was blocked as a result of this violation, or only logged.</description>
    <inlineHelpText>Reflects the Block Request setting on the rule at the time it fired.</inlineHelpText>
    <label>Request Blocked</label>
    <type>Checkbox</type>
</CustomField>