force-app/main/default/objects/AIViolation__c/fields/ReviewStatus__c.field-meta.xml
<CustomField>
    <fullName>ReviewStatus__c</fullName>
    <description>Whether an admin has looked at this violation. Set to Reviewed from the AI Activity tab&apos;s Violations list.</description>
    <inlineHelpText>New until someone marks it as reviewed.</inlineHelpText>
    <label>Review Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Reviewed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>