force-app/main/default/objects/AIViolation__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The user this violation relates to.</description>
    <inlineHelpText>Looked up directly to the User, not AIUserSettings__c, to avoid locking contention with real-time usage checks.</inlineHelpText>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>AIViolations</relationshipName>
    <type>Lookup</type>
</CustomField>