force-app/main/default/objects/AIViolation__c/fields/ViolationType__c.field-meta.xml
<CustomField>
    <fullName>ViolationType__c</fullName>
    <description>The category of violation, copied from the triggering rule at the time it fired.</description>
    <inlineHelpText>Set automatically based on the rule that fired.</inlineHelpText>
    <label>Violation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unauthorised Data Access</fullName>
            </value>
            <value>
                <fullName>Unauthorised Workflow Action</fullName>
            </value>
            <value>
                <fullName>Usage Limit Exceeded</fullName>
            </value>
            <value>
                <fullName>PII Masking Failure</fullName>
            </value>
            <value>
                <fullName>Configuration Violation</fullName>
            </value>
            <value>
                <fullName>AI Flagged Intent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>