force-app/main/default/objects/AIViolation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ViolationType__c</columns>
    <columns>Severity__c</columns>
    <columns>RequestBlocked__c</columns>
    <columns>AIViolationRule__c</columns>
    <columns>User__c</columns>
    <columns>AIConversation__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>